# rust-wasm-conway

./: .appveyor.yml  .gitignore  Cargo.toml  README.md
ideas/: ideas.md
src/: grid.rs  lib.rs
src/grid/: _grid.rs  mod.rs  mod_wrk.rs
src/grid_field/: mod.rs
src/utils/: mod.rs
tests/: web.rs
