
[package]
name = "rust-wasm-conway"
version = "0.1.0"
authors = ["Qubeo <32247672+Qubeo@users.noreply.github.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.42"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
cfg-if = "*"
rand = "*"


[dev-dependencies]
wasm-bindgen-test = "0.2.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
